--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,39 @@
-body {
+/* restyling */
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; /* 62.5% -> 100 * 10 / 16*/
+
+  @media only screen and (max-width: 68.75rem) {
+    html {
+      font-size: 50%;
+    }
+  }
+}
+
+@font-face {
+  font-family: 'barcadebrawl';
+  src: url('./assets/fonts/BarcadeBrawl.ttf');
+}
+
+body {
+  font-family: 'barcadebrawl', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  font-size: 1.6rem;
+
+  background-image: url(./assets/images/bg.png);
+  background-repeat: repeat;
 }
 
 code {
